--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,8 +22,12 @@
     --black-light: rgb(20, 22, 37);
     --edit-button-bg: #F9FAFE;
     --save-as-draft-button-bg: #373B53;
-    --orange-deep: #FF8F00;
-    --orange-light: #fff4e5;
+    --pending-deep: #FF8F00;
+    --pending-light: #fff4e5;
+    --paid-deep: #33D69F;
+    --paid-light: #eafbf5;
+    --draft-deep: #373B53;
+    --draft-light: #d7d8dd;
 }
 
 body {
