--- a/src/app/components/invoice-list/invoice-list.component.scss
+++ b/src/app/components/invoice-list/invoice-list.component.scss
@@ -35,8 +35,87 @@
     display: flex;
     align-items: center;
     gap: 40px;
+    position: relative;
 }
 
+.status-box {
+    width: 192px;
+    height: 128px;
+    background: #ffffff;
+    border-radius: 8px;
+    position: absolute;
+    top: 3.3rem;
+    z-index: 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: Center;
+    gap: 16px;
+    padding: 24px;
+    box-shadow: 0 10px 20px rgba(72, 84, 159, .25);
+    display: none;
+}
+
+.hideStatusBox {
+    display: flex;
+}
+
+.title-clickable {
+    height: 20px;
+    display: flex;
+    gap: 16px;
+    justify-content: space-between;
+    align-items: center;
+    font-size: .75rem;
+    font-weight: 700;
+    cursor: pointer;
+    overflow-x: hidden;
+}
+
+.down-arrow-flip {
+    transform: rotate(180deg);
+}
+
+//// Custom checkbox's 
+.draft-box, .pending-box, .paid-box {
+    display: flex;
+    gap: 13px;
+    font-weight: 700;
+    font-size: .75rem;
+    align-items: center;
+    color: var(--deep-blue-deep);
+}
+
+#draft, #pending, #paid {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 16px;
+    height: 16px;
+    background: var(--grey);
+    border: 1px solid var(--purple-deep);
+    border-radius: 2px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+}
+
+#draft::after, #pending::after, #paid::after {
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    content: "\f00c";
+    color: #ffffff;
+    display: none;
+    font-size: 10px;
+}
+
+#draft:checked, #pending:checked, #paid:checked {
+    background: var(--purple-deep);
+}
+
+#draft:checked::after, #pending:checked::after, #paid:checked::after {
+    display: block;
+}
 
 // Invoice List Items
 .invoice-list-items {
@@ -110,11 +189,35 @@
 .item-status {
     width: 104px;
     height: 40px;
-    background: var(--orange-light);
     border-radius: 6px;
     display: grid;
     place-items: center;
     margin-right: 39px;
+    font-weight: 600;
+}
+
+//Paid status colours
+.status-paid-color {
+    color: var(--paid-deep);
+}
+.status-paid-bg {
+    background: var(--paid-light);
+}
+
+//Pending status colours
+.status-pending-color {
+    color: var(--pending-deep);
+}
+.status-pending-bg {
+    background: var(--pending-light);
+}
+
+//Draft status colours
+.status-draft-color {
+    color: var(--draft-deep);
+}
+.status-draft-bg {
+    background: var(--draft-light);
 }
 
 // .right-arrow {
