--- a/src/app/components/invoice-list/invoice-list.component.html
+++ b/src/app/components/invoice-list/invoice-list.component.html
@@ -3,12 +3,23 @@
         <div class="invoice-list-menu">
             <div class="no-of-invoices">
                 <p>Invoices</p>
-                <p>There are {{ (invoices$ | async)?.length || 0 }} total invoices</p>
+                @if(windowWidth > 530) {
+                  <p>There are {{ (invoices$ | async)?.length || 0 }} total invoices</p>
+                }
+                @else if(windowWidth <= 530) {
+                  <p>{{ (invoices$ | async)?.length || 0 }} invoices</p>
+                }
+                
             </div>
             <div class="right-side">
                 <div class="filter-by-status" (click)="togglefilter()">
                     <div class="title-clickable">
-                      <p>Filter by Status</p>
+                      @if(windowWidth > 530) {
+                        <p>Filter by Status</p>
+                      }
+                      @else if(windowWidth <= 530) {
+                        <p>Filter</p>
+                      }
                       <svg class="down-arrow" [class]="{'down-arrow-flip': filterClicked}" width="11" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 1l4.228 4.228L9.456 1" stroke="#7C5DFA" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
                     </div>
                     <div class="status-box" [class]="{'hideStatusBox': filterClicked}">
@@ -27,11 +38,17 @@
                     </div>
                     
                 </div>
-                <button class="btn new-invoice-btn">
+                <button class="btn new-invoice-btn" (click)="getWindowSize()">
                     <div class="svg-container">
                       <svg width="11" height="11" xmlns="http://www.w3.org/2000/svg"><path d="M6.313 10.023v-3.71h3.71v-2.58h-3.71V.023h-2.58v3.71H.023v2.58h3.71v3.71z" fill="#7C5DFA" fill-rule="nonzero"/></svg>
                     </div>
-                    New Invoice
+                    @if(windowWidth > 530) {
+                      New Invoice
+                    }
+                    @else if(windowWidth < 530) {
+                      New
+                    }
+                    
                 </button>
             </div>
         </div>
