Invoice Details UI update - controls

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,9 @@
     --paid-light: #eafbf5;
     --draft-deep: #373B53;
     --draft-light: #d7d8dd;
+    --white: #ffffff;
+
+    --item-details-text-color: #858BB2;
 }
 
 body {
