--- a/src/app/components/invoice-details/invoice-details.component.html
+++ b/src/app/components/invoice-details/invoice-details.component.html
@@ -1,1 +1,23 @@
-<p>invoice-details works!</p>
+<div class="main-container">
+    <div class="invoice-details-wrapper">
+        <div class="nav-back">
+            <svg class="back-arrow" width="7" height="10" xmlns="http://www.w3.org/2000/svg"><path d="M6.342.886L2.114 5.114l4.228 4.228" stroke="#9277FF" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+            <p class="go-back">Go back</p>
+        </div>
+        <div class="controls">
+            <div class="status">
+                <p>Status</p>
+                <p class="item-status" ><span class="span-status-color">&#9679;</span>Pending</p>
+            </div>
+            <div class="control-btns">
+                <button class="btn edit-btn">Edit</button>
+                <button class="btn delete-btn">Delete</button>
+                <button class="btn mark-as-paid-btn">Mark as Paid</button>
+            </div>
+        </div>
+
+        <div class="details-container">
+            
+        </div>
+    </div>
+</div>
