Invoice details UI update

--- a/src/app/components/invoice-details/invoice-details.component.html
+++ b/src/app/components/invoice-details/invoice-details.component.html
@@ -17,7 +17,10 @@
         </div>
 
         <div class="details-container">
-            
+            <div class="id-and-occupation">
+                <p><span>#</span>XM9A1</p>
+                <p>Graphic Design</p>
+            </div>
         </div>
     </div>
 </div>
