--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,8 @@
     --white: #ffffff;
 
     --item-details-text-color: #858BB2;
+    --item-info-box-color: #F9FAFE;
+    --amount-due-box-color: #373B53;
 }
 
 body {
