--- a/src/app/components/invoice-details/invoice-details.component.html
+++ b/src/app/components/invoice-details/invoice-details.component.html
@@ -17,9 +17,81 @@
         </div>
 
         <div class="details-container">
-            <div class="id-and-occupation">
-                <p><span>#</span>XM9A1</p>
-                <p>Graphic Design</p>
+            <div class="top-sec">
+                <div class="id-and-occupation">
+                    <p class="id"><span class="id-span">#</span>XM9A1</p>
+                    <p class="description">Graphic Design</p>
+                </div>
+                <div class="senders-address">
+                    <p class="senders-street">19 Union Terrace</p>
+                    <p class="senders-city">London </p>
+                    <p class="senders-postcode">E1 3EZ</p>
+                    <p class="senders-country">United Kingdom</p>
+                </div>
+            </div>
+
+            <div class="middle-sec">
+                <div class="dates">
+                    <div class="invoice-date">
+                        <p>Invoice Date</p>
+                        <p>21 Aug 2021</p>
+                    </div>
+                    <div class="payment-due">
+                        <p>Payment Due</p>
+                        <p>20 Sep 2021</p>
+                    </div>
+                </div>
+
+                <div class="client-bill">
+                    <div class="bill-to">
+                        <p>Bill To</p>
+                        <p class="client-name">Alex Grim</p>
+                    </div>
+                    <div class="client-address">
+                        <p class="clients-street">84 Church Way</p>
+                        <p class="clients-city">Bradford</p>
+                        <p class="clients-post-code">BD1 9PB</p>
+                        <p class="clients-country">United Kingdom</p>
+                    </div>
+                </div>
+
+                <div class="send-to">
+                    <p>Send to</p>
+                    <p class="client-email">alexgrimmail.com</p>
+                </div>
+            </div>
+
+            <div class="bottom-sec">
+                <div class="item-info">
+                    <div class="headers">
+                        <p>Item Name</p>
+                        <div class="">
+                            <p>QTY</p>
+                            <p>Price</p>
+                            <p>Total</p>
+                        </div>
+                    </div>
+                    <div class="item-description">
+                        <p>Banner Design</p>
+                        <div class="">
+                            <p>1</p>
+                            <p>$156.00</p>
+                            <p>$156.00</p>
+                        </div>
+                    </div>
+                    <div class="item-description">
+                        <p>Email Design</p>
+                        <div class="">
+                            <p>2</p>
+                            <p>$200.00</p>
+                            <p>$400.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="amount-due">
+                    <p>Amount Due</p>
+                    <p>$ 556.00</p>
+                </div>
             </div>
         </div>
     </div>
