--- a/src/app/components/invoice-details/invoice-details.component.html
+++ b/src/app/components/invoice-details/invoice-details.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div class="invoice-details-wrapper">
-        <div class="nav-back">
+        <div class="nav-back" (click)="gotoList()">
             <svg class="back-arrow" width="7" height="10" xmlns="http://www.w3.org/2000/svg"><path d="M6.342.886L2.114 5.114l4.228 4.228" stroke="#9277FF" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
             <p class="go-back">Go back</p>
         </div>
