--- a/src/app/components/invoice-details/invoice-details.component.scss
+++ b/src/app/components/invoice-details/invoice-details.component.scss
@@ -44,7 +44,7 @@
         height: 40px;
         border-radius: 6px;
         // border: 1px solid lightgrey;
-        background: var(--pending-light);
+        // background: var(--pending-light);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -102,10 +102,11 @@
 
 .details-container {
     width: 100%;
-    height: 631px;
+    height: fit-content;
     background: var(--white);
     border-radius: 8px;
     padding: 32px;
+    margin-bottom: 32px;
 }
 
 
