--- a/src/app/components/invoice-list/invoice-list.component.html
+++ b/src/app/components/invoice-list/invoice-list.component.html
@@ -58,7 +58,7 @@
             @if(filteredInvoices$ | async; as invoices) {
               @for(invoice of invoices; track invoice) {
                 <div class="invoice-list-items">
-                  <div class="item-details" (click)="viewInvoiceDetails()">
+                  <div class="item-details" (click)="viewInvoiceDetails(invoice)">
                       <div class="id-and-date">
                           <div class="for-mobile-flexing">
                               <p class="item-id"><span class="span-purple">#</span> {{ invoice.id }} </p>
@@ -67,7 +67,7 @@
                           <p class="name">{{ invoice.clientName }}</p>
                       </div>
                       <div class="amount-and-status">
-                          <p class="item-amount">{{ invoice.total | currency }}</p>
+                          <p class="item-amount">{{ invoice.total | currency:'GBP' }}</p>
                           @if(invoice.status === 'paid') {
                             <p class="item-status" [class]="{'status-paid-bg': true}"><span [class]="{'status-paid-color': true}" class="span-status-color">&#9679; {{ invoice.status.toUpperCase().slice(0,1) + invoice.status.slice(1) }} </span></p>
                           }
