Delete item implementation inprocess

--- a/src/app/components/invoice-details/invoice-details.component.html
+++ b/src/app/components/invoice-details/invoice-details.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="control-btns">
                 <button class="btn edit-btn">Edit</button>
-                <button class="btn delete-btn">Delete</button>
+                <button class="btn delete-btn" (click)="onDeleteInvoice(invoice.id)">Delete</button>
                 <button class="btn mark-as-paid-btn">Mark as Paid</button>
             </div>
         </div>
